Regression(r116408): Ctrl-A (select all) on large text file hangs the tab with high CPU usage https://bugs.webkit.org/show_bug.cgi?id=89562

Reviewed by Ryosuke Niwa.

Rather than replace the newlines in-place (in O(n^2)), build a new string using StringBuilder, which takes O(n).

No new tests, this is a perf improvement.

* platform/chromium/ClipboardUtilitiesChromium.cpp:
(WebCore::replaceNewlinesWithWindowsStyleNewlines):
* platform/win/ClipboardUtilitiesWin.cpp:
(WebCore::replaceNewlinesWithWindowsStyleNewlines):


Canonical link: https://commits.webkit.org/107448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120850 268f45cc-cd09-0410-ab3c-d52691b4dbfc